@@ -326,6 +326,7 @@ TclIntStubs tclIntStubs = {
     TclVarHashCreateVar, /* 234 */
     TclInitVarHashTable, /* 235 */
     TclBackgroundException, /* 236 */
+    TclByteArrayMatch, /* 237 */
 };
 
 TclIntPlatStubs tclIntPlatStubs = {
